Two small bugs fixed on desktop
Ready to continue on tablet

--- a/minimill-calc-v2.html
+++ b/minimill-calc-v2.html
@@ -237,9 +237,9 @@
                 var xbreak = document.createElement("br"); // line break
                 coorddiv.appendChild(xbreak);
 
-                var xlabel = document.createElement("Label");  // y label
+                var ylabel = document.createElement("Label");  // y label
                 ylabel.className = "normal";
-                var node = document.createTextNode(Y"+coordindex.toString());
+                var node = document.createTextNode("Y"+coordindex.toString());
                 ylabel.appendChild(node);
                 coorddiv.appendChild(ylabel);
                 
