Change fonts to sans-serif

--- a/minimill-calc-v2.html
+++ b/minimill-calc-v2.html
@@ -44,17 +44,18 @@
     Update 12/15/2017: Removed html code for coordinate pairs 2-9 and added javascript code to extend the form
     starting at coordinate pair 2 on demand. Put the form elements for specifying coordinates inside of a 
     div and added a button to extend the number of coordinate pairs one at a time.
+    later: changed all fonts to sans-serif
     -->
 
 </head>
 <html>
     <style>
-        p.title {font-weight: bold; font-size: 2em; margin-bottom: -20px;} 
+        p.title {font-weight: bold; font-family: Arial, Helvetica, sans-serif; font-size: 2em; margin-bottom: -20px;} 
         p.smallbold {line-height: 1; font-family: Arial, Helvetica, sans-serif; font-size: 1em; font-weight: bold;}  
-        p.normal {line-height: 1; font-size: 1em;} 
-        input.normal {font-size: 2.5em; width: 5em; background-color: yellow;} 
-        label.normal {font-size: 2.5em;}
-        label.medium {font-size: 1.5em;}
+        p.normal {line-height: 1; font-family: Arial, Helvetica, sans-serif;  font-size: 1em;} 
+        input.normal {font-size: 2.5em; font-family: Arial, Helvetica, sans-serif; width: 5em; background-color: yellow;} 
+        label.normal {font-size: 2.5em; font-family: Arial, Helvetica, sans-serif; }
+        label.medium {font-size: 1.5em; font-family: Arial, Helvetica, sans-serif; }
         button.medium {font-size: 2.4em;}
         input[type=radio] {width: 1em; height: 1em; font-size: 1.5em;}
     </style>
